yacc-proj/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> obituary
Rule 1     obituary -> sentence obituary
Rule 2     obituary -> sentence
Rule 3     sentence -> referenceSentence
Rule 4     sentence -> publicationDateSentence
Rule 5     sentence -> birthSentence
Rule 6     sentence -> deathSentence
Rule 7     sentence -> spouseSentence
Rule 8     name -> CAPITAL subname
Rule 9     name -> INITIAL subname
Rule 10    name -> CAPITAL subname SUFFIX
Rule 11    name -> TITLE name
Rule 12    subname -> CAPITAL
Rule 13    subname -> CAPITAL subname
Rule 14    subname -> nee subname
Rule 15    subname -> INITIAL subname
Rule 16    nee -> LPAREN CAPITAL RPAREN
Rule 17    names -> name AND name
Rule 18    names -> CAPITAL AND name
Rule 19    names -> CAPITAL INITIAL AND name
Rule 20    names -> CAPITAL INITIAL SUFFIX AND name
Rule 21    date -> WEEKDAY date
Rule 22    date -> NUMBER MONTH
Rule 23    date -> MONTH NUMBER
Rule 24    date -> NUMBER MONTH YEAR
Rule 25    date -> MONTH NUMBER YEAR
Rule 26    referenceSentence -> reference PERIOD
Rule 27    referenceSentence -> reference NEWLINE
Rule 28    referenceSentence -> reference date PERIOD
Rule 29    referenceSentence -> reference date NEWLINE
Rule 30    referenceSentence -> date reference NEWLINE
Rule 31    referenceSentence -> reference miscellany date NEWLINE
Rule 32    miscellany -> CAPITAL NUMBER NUMBER
Rule 33    reference -> CAPITAL PAPER
Rule 34    reference -> CAPITAL reference
Rule 35    publicationDateSentence -> date NEWLINE
Rule 36    place -> CAPITAL place
Rule 37    place -> CAPITAL
Rule 38    place -> STATE
Rule 39    deathSentence -> death PERIOD
Rule 40    deathSentence -> death NEWLINE
Rule 41    deathSentence -> deathIntro death
Rule 42    deathIntro -> CAPITAL deathIntro
Rule 43    deathIntro -> TITLE
Rule 44    death -> name deathPhrase DIED deathPredicate
Rule 45    death -> name DIED deathPredicate
Rule 46    deathPhrase -> NUMBER
Rule 47    deathPhrase -> NUMBER place
Rule 48    deathPhrase -> NUMBER NUMBER place
Rule 49    deathPredicate -> place WEEKDAY
Rule 50    deathPredicate -> date place
Rule 51    deathPredicate -> date
Rule 52    deathPredicate -> WEEKDAY place
Rule 53    birthSentence -> birth PERIOD
Rule 54    birthSentence -> birth NEWLINE
Rule 55    birthSentence -> CAPITAL birth PERIOD
Rule 56    birthSentence -> birth SUFFIX
Rule 57    birth -> BORN date place names
Rule 58    birth -> BORN date place SONOF names
Rule 59    birth -> BORN date place DAUGHTEROF names
Rule 60    spouseSentence -> spouse spouseSentenceEnd
Rule 61    spouseSentence -> CAPITAL spouse spouseSentenceEnd
Rule 62    spouseSentence -> CAPITAL CAPITAL spouse spouseSentenceEnd
Rule 63    spouseSentence -> TITLE CAPITAL spouse spouseSentenceEnd
Rule 64    spouseSentenceEnd -> CAPITAL spouseSentenceEnd
Rule 65    spouseSentenceEnd -> AND spouseSentenceEnd
Rule 66    spouseSentenceEnd -> HUSBAND spouseSentenceEnd
Rule 67    spouseSentenceEnd -> BORN spouseSentenceEnd
Rule 68    spouseSentenceEnd -> PERIOD
Rule 69    spouse -> HUSBAND name
Rule 70    spouse -> HUSBAND name date
Rule 71    spouse -> HUSBAND name NUMBER
Rule 72    spouse -> HUSBAND name MARRIED date
Rule 73    spouse -> HUSBAND name AND name
Rule 74    spouse -> WIFE name
Rule 75    spouse -> WIFE NUMBER name
Rule 76    spouse -> WIFE name MARRIED date place
Rule 77    spouse -> MARRIAGE name
Rule 78    spouse -> YEAR MARRIED name

Terminals, with rules where they appear

AND                  : 17 18 19 20 65 73
BORN                 : 57 58 59 67
CAPITAL              : 8 10 12 13 16 18 19 20 32 33 34 36 37 42 55 61 62 62 63 64
DAUGHTEROF           : 59
DIED                 : 44 45
HUSBAND              : 66 69 70 71 72 73
INITIAL              : 9 15 19 20
LPAREN               : 16
MARRIAGE             : 77
MARRIED              : 72 76 78
MONTH                : 22 23 24 25
NEWLINE              : 27 29 30 31 35 40 54
NUMBER               : 22 23 24 25 32 32 46 47 48 48 71 75
PAPER                : 33
PERIOD               : 26 28 39 53 55 68
RPAREN               : 16
SONOF                : 58
STATE                : 38
SUFFIX               : 10 20 56
TITLE                : 11 43 63
WEEKDAY              : 21 49 52
WIFE                 : 74 75 76
YEAR                 : 24 25 78
error                : 

Nonterminals, with rules where they appear

birth                : 53 54 55 56
birthSentence        : 5
date                 : 21 28 29 30 31 35 50 51 57 58 59 70 72 76
death                : 39 40 41
deathIntro           : 41 42
deathPhrase          : 44
deathPredicate       : 44 45
deathSentence        : 6
miscellany           : 31
name                 : 11 17 17 18 19 20 44 45 69 70 71 72 73 73 74 75 76 77 78
names                : 57 58 59
nee                  : 14
obituary             : 1 0
place                : 36 47 48 49 50 52 57 58 59 76
publicationDateSentence : 4
reference            : 26 27 28 29 30 31 34
referenceSentence    : 3
sentence             : 1 2
spouse               : 60 61 62 63
spouseSentence       : 7
spouseSentenceEnd    : 60 61 62 63 64 65 66 67
subname              : 8 9 10 13 14 15

Parsing method: LALR

state 0

    (0) S' -> . obituary
    (1) obituary -> . sentence obituary
    (2) obituary -> . sentence
    (3) sentence -> . referenceSentence
    (4) sentence -> . publicationDateSentence
    (5) sentence -> . birthSentence
    (6) sentence -> . deathSentence
    (7) sentence -> . spouseSentence
    (26) referenceSentence -> . reference PERIOD
    (27) referenceSentence -> . reference NEWLINE
    (28) referenceSentence -> . reference date PERIOD
    (29) referenceSentence -> . reference date NEWLINE
    (30) referenceSentence -> . date reference NEWLINE
    (31) referenceSentence -> . reference miscellany date NEWLINE
    (35) publicationDateSentence -> . date NEWLINE
    (53) birthSentence -> . birth PERIOD
    (54) birthSentence -> . birth NEWLINE
    (55) birthSentence -> . CAPITAL birth PERIOD
    (56) birthSentence -> . birth SUFFIX
    (39) deathSentence -> . death PERIOD
    (40) deathSentence -> . death NEWLINE
    (41) deathSentence -> . deathIntro death
    (60) spouseSentence -> . spouse spouseSentenceEnd
    (61) spouseSentence -> . CAPITAL spouse spouseSentenceEnd
    (62) spouseSentence -> . CAPITAL CAPITAL spouse spouseSentenceEnd
    (63) spouseSentence -> . TITLE CAPITAL spouse spouseSentenceEnd
    (33) reference -> . CAPITAL PAPER
    (34) reference -> . CAPITAL reference
    (21) date -> . WEEKDAY date
    (22) date -> . NUMBER MONTH
    (23) date -> . MONTH NUMBER
    (24) date -> . NUMBER MONTH YEAR
    (25) date -> . MONTH NUMBER YEAR
    (57) birth -> . BORN date place names
    (58) birth -> . BORN date place SONOF names
    (59) birth -> . BORN date place DAUGHTEROF names
    (44) death -> . name deathPhrase DIED deathPredicate
    (45) death -> . name DIED deathPredicate
    (42) deathIntro -> . CAPITAL deathIntro
    (43) deathIntro -> . TITLE
    (69) spouse -> . HUSBAND name
    (70) spouse -> . HUSBAND name date
    (71) spouse -> . HUSBAND name NUMBER
    (72) spouse -> . HUSBAND name MARRIED date
    (73) spouse -> . HUSBAND name AND name
    (74) spouse -> . WIFE name
    (75) spouse -> . WIFE NUMBER name
    (76) spouse -> . WIFE name MARRIED date place
    (77) spouse -> . MARRIAGE name
    (78) spouse -> . YEAR MARRIED name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    CAPITAL         shift and go to state 18
    TITLE           shift and go to state 2
    WEEKDAY         shift and go to state 7
    NUMBER          shift and go to state 4
    MONTH           shift and go to state 24
    BORN            shift and go to state 6
    HUSBAND         shift and go to state 11
    WIFE            shift and go to state 23
    MARRIAGE        shift and go to state 12
    YEAR            shift and go to state 3
    INITIAL         shift and go to state 14

    obituary                       shift and go to state 8
    death                          shift and go to state 9
    spouseSentence                 shift and go to state 21
    referenceSentence              shift and go to state 15
    reference                      shift and go to state 1
    sentence                       shift and go to state 10
    deathSentence                  shift and go to state 16
    publicationDateSentence        shift and go to state 5
    name                           shift and go to state 22
    birthSentence                  shift and go to state 25
    birth                          shift and go to state 17
    date                           shift and go to state 19
    spouse                         shift and go to state 20
    deathIntro                     shift and go to state 13

state 1

    (26) referenceSentence -> reference . PERIOD
    (27) referenceSentence -> reference . NEWLINE
    (28) referenceSentence -> reference . date PERIOD
    (29) referenceSentence -> reference . date NEWLINE
    (31) referenceSentence -> reference . miscellany date NEWLINE
    (21) date -> . WEEKDAY date
    (22) date -> . NUMBER MONTH
    (23) date -> . MONTH NUMBER
    (24) date -> . NUMBER MONTH YEAR
    (25) date -> . MONTH NUMBER YEAR
    (32) miscellany -> . CAPITAL NUMBER NUMBER

    PERIOD          shift and go to state 27
    NEWLINE         shift and go to state 26
    WEEKDAY         shift and go to state 7
    NUMBER          shift and go to state 4
    MONTH           shift and go to state 24
    CAPITAL         shift and go to state 28

    date                           shift and go to state 30
    miscellany                     shift and go to state 29

state 2

    (63) spouseSentence -> TITLE . CAPITAL spouse spouseSentenceEnd
    (43) deathIntro -> TITLE .
    (11) name -> TITLE . name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

  ! shift/reduce conflict for CAPITAL resolved as shift
  ! shift/reduce conflict for INITIAL resolved as shift
  ! shift/reduce conflict for TITLE resolved as shift
    CAPITAL         shift and go to state 33
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

  ! CAPITAL         [ reduce using rule 43 (deathIntro -> TITLE .) ]
  ! INITIAL         [ reduce using rule 43 (deathIntro -> TITLE .) ]
  ! TITLE           [ reduce using rule 43 (deathIntro -> TITLE .) ]

    name                           shift and go to state 31

state 3

    (78) spouse -> YEAR . MARRIED name

    MARRIED         shift and go to state 34


state 4

    (22) date -> NUMBER . MONTH
    (24) date -> NUMBER . MONTH YEAR

    MONTH           shift and go to state 35


state 5

    (4) sentence -> publicationDateSentence .

    CAPITAL         reduce using rule 4 (sentence -> publicationDateSentence .)
    TITLE           reduce using rule 4 (sentence -> publicationDateSentence .)
    WEEKDAY         reduce using rule 4 (sentence -> publicationDateSentence .)
    NUMBER          reduce using rule 4 (sentence -> publicationDateSentence .)
    MONTH           reduce using rule 4 (sentence -> publicationDateSentence .)
    BORN            reduce using rule 4 (sentence -> publicationDateSentence .)
    HUSBAND         reduce using rule 4 (sentence -> publicationDateSentence .)
    WIFE            reduce using rule 4 (sentence -> publicationDateSentence .)
    MARRIAGE        reduce using rule 4 (sentence -> publicationDateSentence .)
    YEAR            reduce using rule 4 (sentence -> publicationDateSentence .)
    INITIAL         reduce using rule 4 (sentence -> publicationDateSentence .)
    $end            reduce using rule 4 (sentence -> publicationDateSentence .)


state 6

    (57) birth -> BORN . date place names
    (58) birth -> BORN . date place SONOF names
    (59) birth -> BORN . date place DAUGHTEROF names
    (21) date -> . WEEKDAY date
    (22) date -> . NUMBER MONTH
    (23) date -> . MONTH NUMBER
    (24) date -> . NUMBER MONTH YEAR
    (25) date -> . MONTH NUMBER YEAR

    WEEKDAY         shift and go to state 7
    NUMBER          shift and go to state 4
    MONTH           shift and go to state 24

    date                           shift and go to state 36

state 7

    (21) date -> WEEKDAY . date
    (21) date -> . WEEKDAY date
    (22) date -> . NUMBER MONTH
    (23) date -> . MONTH NUMBER
    (24) date -> . NUMBER MONTH YEAR
    (25) date -> . MONTH NUMBER YEAR

    WEEKDAY         shift and go to state 7
    NUMBER          shift and go to state 4
    MONTH           shift and go to state 24

    date                           shift and go to state 37

state 8

    (0) S' -> obituary .



state 9

    (39) deathSentence -> death . PERIOD
    (40) deathSentence -> death . NEWLINE

    PERIOD          shift and go to state 39
    NEWLINE         shift and go to state 38


state 10

    (1) obituary -> sentence . obituary
    (2) obituary -> sentence .
    (1) obituary -> . sentence obituary
    (2) obituary -> . sentence
    (3) sentence -> . referenceSentence
    (4) sentence -> . publicationDateSentence
    (5) sentence -> . birthSentence
    (6) sentence -> . deathSentence
    (7) sentence -> . spouseSentence
    (26) referenceSentence -> . reference PERIOD
    (27) referenceSentence -> . reference NEWLINE
    (28) referenceSentence -> . reference date PERIOD
    (29) referenceSentence -> . reference date NEWLINE
    (30) referenceSentence -> . date reference NEWLINE
    (31) referenceSentence -> . reference miscellany date NEWLINE
    (35) publicationDateSentence -> . date NEWLINE
    (53) birthSentence -> . birth PERIOD
    (54) birthSentence -> . birth NEWLINE
    (55) birthSentence -> . CAPITAL birth PERIOD
    (56) birthSentence -> . birth SUFFIX
    (39) deathSentence -> . death PERIOD
    (40) deathSentence -> . death NEWLINE
    (41) deathSentence -> . deathIntro death
    (60) spouseSentence -> . spouse spouseSentenceEnd
    (61) spouseSentence -> . CAPITAL spouse spouseSentenceEnd
    (62) spouseSentence -> . CAPITAL CAPITAL spouse spouseSentenceEnd
    (63) spouseSentence -> . TITLE CAPITAL spouse spouseSentenceEnd
    (33) reference -> . CAPITAL PAPER
    (34) reference -> . CAPITAL reference
    (21) date -> . WEEKDAY date
    (22) date -> . NUMBER MONTH
    (23) date -> . MONTH NUMBER
    (24) date -> . NUMBER MONTH YEAR
    (25) date -> . MONTH NUMBER YEAR
    (57) birth -> . BORN date place names
    (58) birth -> . BORN date place SONOF names
    (59) birth -> . BORN date place DAUGHTEROF names
    (44) death -> . name deathPhrase DIED deathPredicate
    (45) death -> . name DIED deathPredicate
    (42) deathIntro -> . CAPITAL deathIntro
    (43) deathIntro -> . TITLE
    (69) spouse -> . HUSBAND name
    (70) spouse -> . HUSBAND name date
    (71) spouse -> . HUSBAND name NUMBER
    (72) spouse -> . HUSBAND name MARRIED date
    (73) spouse -> . HUSBAND name AND name
    (74) spouse -> . WIFE name
    (75) spouse -> . WIFE NUMBER name
    (76) spouse -> . WIFE name MARRIED date place
    (77) spouse -> . MARRIAGE name
    (78) spouse -> . YEAR MARRIED name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    $end            reduce using rule 2 (obituary -> sentence .)
    CAPITAL         shift and go to state 18
    TITLE           shift and go to state 2
    WEEKDAY         shift and go to state 7
    NUMBER          shift and go to state 4
    MONTH           shift and go to state 24
    BORN            shift and go to state 6
    HUSBAND         shift and go to state 11
    WIFE            shift and go to state 23
    MARRIAGE        shift and go to state 12
    YEAR            shift and go to state 3
    INITIAL         shift and go to state 14

    obituary                       shift and go to state 40
    death                          shift and go to state 9
    spouseSentence                 shift and go to state 21
    referenceSentence              shift and go to state 15
    reference                      shift and go to state 1
    sentence                       shift and go to state 10
    deathSentence                  shift and go to state 16
    publicationDateSentence        shift and go to state 5
    name                           shift and go to state 22
    birthSentence                  shift and go to state 25
    birth                          shift and go to state 17
    date                           shift and go to state 19
    spouse                         shift and go to state 20
    deathIntro                     shift and go to state 13

state 11

    (69) spouse -> HUSBAND . name
    (70) spouse -> HUSBAND . name date
    (71) spouse -> HUSBAND . name NUMBER
    (72) spouse -> HUSBAND . name MARRIED date
    (73) spouse -> HUSBAND . name AND name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    CAPITAL         shift and go to state 42
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

    name                           shift and go to state 41

state 12

    (77) spouse -> MARRIAGE . name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    CAPITAL         shift and go to state 42
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

    name                           shift and go to state 43

state 13

    (41) deathSentence -> deathIntro . death
    (44) death -> . name deathPhrase DIED deathPredicate
    (45) death -> . name DIED deathPredicate
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    CAPITAL         shift and go to state 42
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

    death                          shift and go to state 44
    name                           shift and go to state 22

state 14

    (9) name -> INITIAL . subname
    (12) subname -> . CAPITAL
    (13) subname -> . CAPITAL subname
    (14) subname -> . nee subname
    (15) subname -> . INITIAL subname
    (16) nee -> . LPAREN CAPITAL RPAREN

    CAPITAL         shift and go to state 49
    INITIAL         shift and go to state 46
    LPAREN          shift and go to state 48

    nee                            shift and go to state 45
    subname                        shift and go to state 47

state 15

    (3) sentence -> referenceSentence .

    CAPITAL         reduce using rule 3 (sentence -> referenceSentence .)
    TITLE           reduce using rule 3 (sentence -> referenceSentence .)
    WEEKDAY         reduce using rule 3 (sentence -> referenceSentence .)
    NUMBER          reduce using rule 3 (sentence -> referenceSentence .)
    MONTH           reduce using rule 3 (sentence -> referenceSentence .)
    BORN            reduce using rule 3 (sentence -> referenceSentence .)
    HUSBAND         reduce using rule 3 (sentence -> referenceSentence .)
    WIFE            reduce using rule 3 (sentence -> referenceSentence .)
    MARRIAGE        reduce using rule 3 (sentence -> referenceSentence .)
    YEAR            reduce using rule 3 (sentence -> referenceSentence .)
    INITIAL         reduce using rule 3 (sentence -> referenceSentence .)
    $end            reduce using rule 3 (sentence -> referenceSentence .)


state 16

    (6) sentence -> deathSentence .

    CAPITAL         reduce using rule 6 (sentence -> deathSentence .)
    TITLE           reduce using rule 6 (sentence -> deathSentence .)
    WEEKDAY         reduce using rule 6 (sentence -> deathSentence .)
    NUMBER          reduce using rule 6 (sentence -> deathSentence .)
    MONTH           reduce using rule 6 (sentence -> deathSentence .)
    BORN            reduce using rule 6 (sentence -> deathSentence .)
    HUSBAND         reduce using rule 6 (sentence -> deathSentence .)
    WIFE            reduce using rule 6 (sentence -> deathSentence .)
    MARRIAGE        reduce using rule 6 (sentence -> deathSentence .)
    YEAR            reduce using rule 6 (sentence -> deathSentence .)
    INITIAL         reduce using rule 6 (sentence -> deathSentence .)
    $end            reduce using rule 6 (sentence -> deathSentence .)


state 17

    (53) birthSentence -> birth . PERIOD
    (54) birthSentence -> birth . NEWLINE
    (56) birthSentence -> birth . SUFFIX

    PERIOD          shift and go to state 51
    NEWLINE         shift and go to state 50
    SUFFIX          shift and go to state 52


state 18

    (55) birthSentence -> CAPITAL . birth PERIOD
    (61) spouseSentence -> CAPITAL . spouse spouseSentenceEnd
    (62) spouseSentence -> CAPITAL . CAPITAL spouse spouseSentenceEnd
    (33) reference -> CAPITAL . PAPER
    (34) reference -> CAPITAL . reference
    (42) deathIntro -> CAPITAL . deathIntro
    (8) name -> CAPITAL . subname
    (10) name -> CAPITAL . subname SUFFIX
    (57) birth -> . BORN date place names
    (58) birth -> . BORN date place SONOF names
    (59) birth -> . BORN date place DAUGHTEROF names
    (69) spouse -> . HUSBAND name
    (70) spouse -> . HUSBAND name date
    (71) spouse -> . HUSBAND name NUMBER
    (72) spouse -> . HUSBAND name MARRIED date
    (73) spouse -> . HUSBAND name AND name
    (74) spouse -> . WIFE name
    (75) spouse -> . WIFE NUMBER name
    (76) spouse -> . WIFE name MARRIED date place
    (77) spouse -> . MARRIAGE name
    (78) spouse -> . YEAR MARRIED name
    (33) reference -> . CAPITAL PAPER
    (34) reference -> . CAPITAL reference
    (42) deathIntro -> . CAPITAL deathIntro
    (43) deathIntro -> . TITLE
    (12) subname -> . CAPITAL
    (13) subname -> . CAPITAL subname
    (14) subname -> . nee subname
    (15) subname -> . INITIAL subname
    (16) nee -> . LPAREN CAPITAL RPAREN

    CAPITAL         shift and go to state 57
    PAPER           shift and go to state 59
    BORN            shift and go to state 6
    HUSBAND         shift and go to state 11
    WIFE            shift and go to state 23
    MARRIAGE        shift and go to state 12
    YEAR            shift and go to state 3
    TITLE           shift and go to state 54
    INITIAL         shift and go to state 46
    LPAREN          shift and go to state 48

    reference                      shift and go to state 53
    nee                            shift and go to state 45
    subname                        shift and go to state 60
    birth                          shift and go to state 56
    spouse                         shift and go to state 58
    deathIntro                     shift and go to state 55

state 19

    (30) referenceSentence -> date . reference NEWLINE
    (35) publicationDateSentence -> date . NEWLINE
    (33) reference -> . CAPITAL PAPER
    (34) reference -> . CAPITAL reference

    NEWLINE         shift and go to state 61
    CAPITAL         shift and go to state 63

    reference                      shift and go to state 62

state 20

    (60) spouseSentence -> spouse . spouseSentenceEnd
    (64) spouseSentenceEnd -> . CAPITAL spouseSentenceEnd
    (65) spouseSentenceEnd -> . AND spouseSentenceEnd
    (66) spouseSentenceEnd -> . HUSBAND spouseSentenceEnd
    (67) spouseSentenceEnd -> . BORN spouseSentenceEnd
    (68) spouseSentenceEnd -> . PERIOD

    CAPITAL         shift and go to state 68
    AND             shift and go to state 64
    HUSBAND         shift and go to state 69
    BORN            shift and go to state 67
    PERIOD          shift and go to state 66

    spouseSentenceEnd              shift and go to state 65

state 21

    (7) sentence -> spouseSentence .

    CAPITAL         reduce using rule 7 (sentence -> spouseSentence .)
    TITLE           reduce using rule 7 (sentence -> spouseSentence .)
    WEEKDAY         reduce using rule 7 (sentence -> spouseSentence .)
    NUMBER          reduce using rule 7 (sentence -> spouseSentence .)
    MONTH           reduce using rule 7 (sentence -> spouseSentence .)
    BORN            reduce using rule 7 (sentence -> spouseSentence .)
    HUSBAND         reduce using rule 7 (sentence -> spouseSentence .)
    WIFE            reduce using rule 7 (sentence -> spouseSentence .)
    MARRIAGE        reduce using rule 7 (sentence -> spouseSentence .)
    YEAR            reduce using rule 7 (sentence -> spouseSentence .)
    INITIAL         reduce using rule 7 (sentence -> spouseSentence .)
    $end            reduce using rule 7 (sentence -> spouseSentence .)


state 22

    (44) death -> name . deathPhrase DIED deathPredicate
    (45) death -> name . DIED deathPredicate
    (46) deathPhrase -> . NUMBER
    (47) deathPhrase -> . NUMBER place
    (48) deathPhrase -> . NUMBER NUMBER place

    DIED            shift and go to state 72
    NUMBER          shift and go to state 70

    deathPhrase                    shift and go to state 71

state 23

    (74) spouse -> WIFE . name
    (75) spouse -> WIFE . NUMBER name
    (76) spouse -> WIFE . name MARRIED date place
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    NUMBER          shift and go to state 74
    CAPITAL         shift and go to state 42
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

    name                           shift and go to state 73

state 24

    (23) date -> MONTH . NUMBER
    (25) date -> MONTH . NUMBER YEAR

    NUMBER          shift and go to state 75


state 25

    (5) sentence -> birthSentence .

    CAPITAL         reduce using rule 5 (sentence -> birthSentence .)
    TITLE           reduce using rule 5 (sentence -> birthSentence .)
    WEEKDAY         reduce using rule 5 (sentence -> birthSentence .)
    NUMBER          reduce using rule 5 (sentence -> birthSentence .)
    MONTH           reduce using rule 5 (sentence -> birthSentence .)
    BORN            reduce using rule 5 (sentence -> birthSentence .)
    HUSBAND         reduce using rule 5 (sentence -> birthSentence .)
    WIFE            reduce using rule 5 (sentence -> birthSentence .)
    MARRIAGE        reduce using rule 5 (sentence -> birthSentence .)
    YEAR            reduce using rule 5 (sentence -> birthSentence .)
    INITIAL         reduce using rule 5 (sentence -> birthSentence .)
    $end            reduce using rule 5 (sentence -> birthSentence .)


state 26

    (27) referenceSentence -> reference NEWLINE .

    CAPITAL         reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    TITLE           reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    WEEKDAY         reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    NUMBER          reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    MONTH           reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    BORN            reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    HUSBAND         reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    WIFE            reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    MARRIAGE        reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    YEAR            reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    INITIAL         reduce using rule 27 (referenceSentence -> reference NEWLINE .)
    $end            reduce using rule 27 (referenceSentence -> reference NEWLINE .)


state 27

    (26) referenceSentence -> reference PERIOD .

    CAPITAL         reduce using rule 26 (referenceSentence -> reference PERIOD .)
    TITLE           reduce using rule 26 (referenceSentence -> reference PERIOD .)
    WEEKDAY         reduce using rule 26 (referenceSentence -> reference PERIOD .)
    NUMBER          reduce using rule 26 (referenceSentence -> reference PERIOD .)
    MONTH           reduce using rule 26 (referenceSentence -> reference PERIOD .)
    BORN            reduce using rule 26 (referenceSentence -> reference PERIOD .)
    HUSBAND         reduce using rule 26 (referenceSentence -> reference PERIOD .)
    WIFE            reduce using rule 26 (referenceSentence -> reference PERIOD .)
    MARRIAGE        reduce using rule 26 (referenceSentence -> reference PERIOD .)
    YEAR            reduce using rule 26 (referenceSentence -> reference PERIOD .)
    INITIAL         reduce using rule 26 (referenceSentence -> reference PERIOD .)
    $end            reduce using rule 26 (referenceSentence -> reference PERIOD .)


state 28

    (32) miscellany -> CAPITAL . NUMBER NUMBER

    NUMBER          shift and go to state 76


state 29

    (31) referenceSentence -> reference miscellany . date NEWLINE
    (21) date -> . WEEKDAY date
    (22) date -> . NUMBER MONTH
    (23) date -> . MONTH NUMBER
    (24) date -> . NUMBER MONTH YEAR
    (25) date -> . MONTH NUMBER YEAR

    WEEKDAY         shift and go to state 7
    NUMBER          shift and go to state 4
    MONTH           shift and go to state 24

    date                           shift and go to state 77

state 30

    (28) referenceSentence -> reference date . PERIOD
    (29) referenceSentence -> reference date . NEWLINE

    PERIOD          shift and go to state 79
    NEWLINE         shift and go to state 78


state 31

    (11) name -> TITLE name .

    CAPITAL         reduce using rule 11 (name -> TITLE name .)
    AND             reduce using rule 11 (name -> TITLE name .)
    HUSBAND         reduce using rule 11 (name -> TITLE name .)
    BORN            reduce using rule 11 (name -> TITLE name .)
    PERIOD          reduce using rule 11 (name -> TITLE name .)
    DIED            reduce using rule 11 (name -> TITLE name .)
    NUMBER          reduce using rule 11 (name -> TITLE name .)
    NEWLINE         reduce using rule 11 (name -> TITLE name .)
    SUFFIX          reduce using rule 11 (name -> TITLE name .)
    MARRIED         reduce using rule 11 (name -> TITLE name .)
    WEEKDAY         reduce using rule 11 (name -> TITLE name .)
    MONTH           reduce using rule 11 (name -> TITLE name .)


state 32

    (11) name -> TITLE . name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    CAPITAL         shift and go to state 42
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

    name                           shift and go to state 31

state 33

    (63) spouseSentence -> TITLE CAPITAL . spouse spouseSentenceEnd
    (8) name -> CAPITAL . subname
    (10) name -> CAPITAL . subname SUFFIX
    (69) spouse -> . HUSBAND name
    (70) spouse -> . HUSBAND name date
    (71) spouse -> . HUSBAND name NUMBER
    (72) spouse -> . HUSBAND name MARRIED date
    (73) spouse -> . HUSBAND name AND name
    (74) spouse -> . WIFE name
    (75) spouse -> . WIFE NUMBER name
    (76) spouse -> . WIFE name MARRIED date place
    (77) spouse -> . MARRIAGE name
    (78) spouse -> . YEAR MARRIED name
    (12) subname -> . CAPITAL
    (13) subname -> . CAPITAL subname
    (14) subname -> . nee subname
    (15) subname -> . INITIAL subname
    (16) nee -> . LPAREN CAPITAL RPAREN

    HUSBAND         shift and go to state 11
    WIFE            shift and go to state 23
    MARRIAGE        shift and go to state 12
    YEAR            shift and go to state 3
    CAPITAL         shift and go to state 49
    INITIAL         shift and go to state 46
    LPAREN          shift and go to state 48

    nee                            shift and go to state 45
    subname                        shift and go to state 60
    spouse                         shift and go to state 80

state 34

    (78) spouse -> YEAR MARRIED . name
    (8) name -> . CAPITAL subname
    (9) name -> . INITIAL subname
    (10) name -> . CAPITAL subname SUFFIX
    (11) name -> . TITLE name

    CAPITAL         shift and go to state 42
    INITIAL         shift and go to state 14
    TITLE           shift and go to state 32

    name                           shift and go to state 81

state 35

    (22) date -> NUMBER MONTH .
    (24) date -> NUMBER MONTH . YEAR

  ! shift/reduce conflict for YEAR resolved as shift
    CAPITAL         reduce using rule 22 (date -> NUMBER MONTH .)
    STATE           reduce using rule 22 (date -> NUMBER MONTH .)
    PERIOD          reduce using rule 22 (date -> NUMBER MONTH .)
    NEWLINE         reduce using rule 22 (date -> NUMBER MONTH .)
    TITLE           reduce using rule 22 (date -> NUMBER MONTH .)
    WEEKDAY         reduce using rule 22 (date -> NUMBER MONTH .)
    NUMBER          reduce using rule 22 (date -> NUMBER MONTH .)
    MONTH           reduce using rule 22 (date -> NUMBER MONTH .)
    BORN            reduce using rule 22 (date -> NUMBER MONTH .)
    HUSBAND         reduce using rule 22 (date -> NUMBER MONTH .)
    WIFE            reduce using rule 22 (date -> NUMBER MONTH .)
    MARRIAGE        reduce using rule 22 (date -> NUMBER MONTH .)
    INITIAL         reduce using rule 22 (date -> NUMBER MONTH .)
    $end            reduce using rule 22 (date -> NUMBER MONTH .)
    AND             reduce using rule 22 (date -> NUMBER MONTH .)
    YEAR            shift and go to state 82

  ! YEAR            [ reduce using rule 22 (date -> NUMBER MONTH .) ]


state 36
